Bug 99495 - [PATCH] Fix building under musl-libc
Summary: [PATCH] Fix building under musl-libc
Status: RESOLVED FIXED
Alias: None
Product: libqmi
Classification: Unclassified
Component: libqmi (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium minor
Assignee: Dan Williams
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-22 20:15 UTC by Stuart Cardall
Modified: 2017-01-31 21:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix-unknown-fd_set.patch (235 bytes, patch)
2017-01-22 20:15 UTC, Stuart Cardall
Details | Splinter Review

Description Stuart Cardall 2017-01-22 20:15:43 UTC
Created attachment 129097 [details] [review]
fix-unknown-fd_set.patch

- Include sys/select.h in utils/swi-update.c to fix unknown type name 'fd_set'

- fixes building under musl-libc in Alpine Linux:

- https://github.com/alpinelinux/aports/pull/781
---

--- libqmi-1.17.900/utils/swi-update.c
+++ libqmi-1.17.900/utils/swi-update.c.new
@@ -40,6 +40,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <sys/stat.h>
+#include <sys/select.h>
 #include <termios.h>
 #include <unistd.h>
Comment 1 Aleksander Morgado 2017-01-31 21:44:20 UTC
Thanks, pushed to git master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.