utils,swi-update: fix building with musl-libc

https://bugs.freedesktop.org/show_bug.cgi?id=99495